# elaxtra-outreach-system

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  railway.json
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_allow_assistant_agent_type.py
src/: __init__.py  app.py  config.py  main.py
src/agents/: assistant.py  composer.py  orchestrator.py  registry.py  responder.py  scheduler_agent.py  sessions.py
src/db/: engine.py  models.py  queries.py
src/services/: agentmail_client.py  excel.py  file_upload.py  rate_limiter.py  system_stats.py
src/utils/: logging.py
src/web/: __init__.py  auth.py  data.py  routes.py
src/web/templates/: _activity_list.html  _contacts_table.html  _macros.html  activity.html  agents.html  base.html  contacts.html  mcp.html  overview.html
src/webhooks/: handler.py  router.py  verify.py
tests/: conftest.py  test_composer.py  test_orchestrator.py  test_rate_limiter.py  test_responder.py  test_webhook_handler.py
