[project]
name = "elaxtra-outreach"
version = "0.1.0"
description = "Autonomous B2B outreach system for Elaxtra Advisors — Managed Agents + AgentMail"
requires-python = ">=3.12"
authors = [{ name = "Elaxtra Advisors" }]

dependencies = [
  "anthropic>=0.92.0",
  "agentmail>=0.0.40",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "sqlalchemy[asyncio]>=2.0.35",
  "asyncpg>=0.30.0",
  "alembic>=1.14.0",
  "apscheduler>=3.10.4",
  "openpyxl>=3.1.5",
  "svix>=1.38.0",
  "structlog>=24.4.0",
  "python-dotenv>=1.0.1",
  "click>=8.1.7",
  "httpx>=0.28.0",
  "aiofiles>=24.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "pytest-mock>=3.14.0",
  "aiosqlite>=0.20.0",
  "ruff>=0.8.0",
]

[project.scripts]
elaxtra = "src.main:cli"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
